// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`platform plan access is unchanged (regression guard) > agency 1`] = `
{
  "advanceInvoices": true,
  "advancedPricingRules": true,
  "analytics": "advanced",
  "annualBilling": false,
  "apiAccess": false,
  "bulkImportMultiSite": true,
  "crmIntegration": false,
  "csvImport": true,
  "customDomain": false,
  "eSignature": true,
  "fieldModules": "full",
  "fiscalEngine": "full",
  "gaebExport": false,
  "maintenanceContracts": true,
  "maxCarriers": 10,
  "maxConfigurators": 10,
  "maxLogisticsSuppliers": 10,
  "maxQuotesPerMonth": 1000,
  "maxTeamMembers": 15,
  "multiCatalog": true,
  "multiSupplierAggregator": true,
  "prioritySupport": true,
  "publicWidget": true,
  "selfServeCheckout": true,
  "showroomCalculator": true,
  "support": "dedicated",
  "transparentWidget": true,
  "trialEligible": true,
  "whiteLabel": true,
}
`;

exports[`platform plan access is unchanged (regression guard) > base 1`] = `
{
  "advanceInvoices": false,
  "advancedPricingRules": false,
  "analytics": "none",
  "annualBilling": true,
  "apiAccess": false,
  "bulkImportMultiSite": false,
  "crmIntegration": false,
  "csvImport": true,
  "customDomain": false,
  "eSignature": false,
  "fieldModules": "rilievo_only",
  "fiscalEngine": "basic",
  "gaebExport": false,
  "maintenanceContracts": false,
  "maxCarriers": 1,
  "maxConfigurators": 1,
  "maxLogisticsSuppliers": 1,
  "maxQuotesPerMonth": 20,
  "maxTeamMembers": 2,
  "multiCatalog": false,
  "multiSupplierAggregator": false,
  "prioritySupport": false,
  "publicWidget": false,
  "selfServeCheckout": true,
  "showroomCalculator": false,
  "support": "email",
  "transparentWidget": false,
  "trialEligible": false,
  "whiteLabel": false,
}
`;

exports[`platform plan access is unchanged (regression guard) > business 1`] = `
{
  "advanceInvoices": true,
  "advancedPricingRules": true,
  "analytics": "basic",
  "annualBilling": true,
  "apiAccess": false,
  "bulkImportMultiSite": false,
  "crmIntegration": false,
  "csvImport": true,
  "customDomain": false,
  "eSignature": true,
  "fieldModules": "full",
  "fiscalEngine": "full",
  "gaebExport": false,
  "maintenanceContracts": true,
  "maxCarriers": 3,
  "maxConfigurators": 3,
  "maxLogisticsSuppliers": 3,
  "maxQuotesPerMonth": "Infinity",
  "maxTeamMembers": 5,
  "multiCatalog": true,
  "multiSupplierAggregator": false,
  "prioritySupport": true,
  "publicWidget": true,
  "selfServeCheckout": true,
  "showroomCalculator": false,
  "support": "priority",
  "transparentWidget": true,
  "trialEligible": true,
  "whiteLabel": true,
}
`;

exports[`platform plan access is unchanged (regression guard) > enterprise 1`] = `
{
  "advanceInvoices": true,
  "advancedPricingRules": true,
  "analytics": "advanced",
  "annualBilling": false,
  "apiAccess": true,
  "bulkImportMultiSite": true,
  "crmIntegration": true,
  "csvImport": true,
  "customDomain": true,
  "eSignature": true,
  "fieldModules": "full",
  "fiscalEngine": "full",
  "gaebExport": true,
  "maintenanceContracts": true,
  "maxCarriers": "Infinity",
  "maxConfigurators": "Infinity",
  "maxLogisticsSuppliers": "Infinity",
  "maxQuotesPerMonth": 1000,
  "maxTeamMembers": "Infinity",
  "multiCatalog": true,
  "multiSupplierAggregator": true,
  "prioritySupport": true,
  "publicWidget": true,
  "selfServeCheckout": false,
  "showroomCalculator": true,
  "support": "dedicated",
  "transparentWidget": true,
  "trialEligible": true,
  "whiteLabel": true,
}
`;

exports[`platform plan access is unchanged (regression guard) > pro 1`] = `
{
  "advanceInvoices": true,
  "advancedPricingRules": true,
  "analytics": "basic",
  "annualBilling": true,
  "apiAccess": false,
  "bulkImportMultiSite": false,
  "crmIntegration": false,
  "csvImport": true,
  "customDomain": false,
  "eSignature": true,
  "fieldModules": "full",
  "fiscalEngine": "full",
  "gaebExport": false,
  "maintenanceContracts": true,
  "maxCarriers": 3,
  "maxConfigurators": 3,
  "maxLogisticsSuppliers": 3,
  "maxQuotesPerMonth": "Infinity",
  "maxTeamMembers": 5,
  "multiCatalog": true,
  "multiSupplierAggregator": false,
  "prioritySupport": true,
  "publicWidget": true,
  "selfServeCheckout": true,
  "showroomCalculator": false,
  "support": "priority",
  "transparentWidget": true,
  "trialEligible": true,
  "whiteLabel": true,
}
`;

exports[`platform plan access is unchanged (regression guard) > showroom 1`] = `
{
  "advanceInvoices": true,
  "advancedPricingRules": true,
  "analytics": "advanced",
  "annualBilling": false,
  "apiAccess": true,
  "bulkImportMultiSite": true,
  "crmIntegration": true,
  "csvImport": true,
  "customDomain": true,
  "eSignature": true,
  "fieldModules": "full",
  "fiscalEngine": "full",
  "gaebExport": true,
  "maintenanceContracts": true,
  "maxCarriers": "Infinity",
  "maxConfigurators": "Infinity",
  "maxLogisticsSuppliers": "Infinity",
  "maxQuotesPerMonth": 1000,
  "maxTeamMembers": "Infinity",
  "multiCatalog": true,
  "multiSupplierAggregator": true,
  "prioritySupport": true,
  "publicWidget": true,
  "selfServeCheckout": false,
  "showroomCalculator": true,
  "support": "dedicated",
  "transparentWidget": true,
  "trialEligible": true,
  "whiteLabel": true,
}
`;

exports[`platform plan access is unchanged (regression guard) > starter 1`] = `
{
  "advanceInvoices": false,
  "advancedPricingRules": false,
  "analytics": "none",
  "annualBilling": true,
  "apiAccess": false,
  "bulkImportMultiSite": false,
  "crmIntegration": false,
  "csvImport": true,
  "customDomain": false,
  "eSignature": false,
  "fieldModules": "rilievo_only",
  "fiscalEngine": "basic",
  "gaebExport": false,
  "maintenanceContracts": false,
  "maxCarriers": 1,
  "maxConfigurators": 1,
  "maxLogisticsSuppliers": 1,
  "maxQuotesPerMonth": 20,
  "maxTeamMembers": 2,
  "multiCatalog": false,
  "multiSupplierAggregator": false,
  "prioritySupport": false,
  "publicWidget": false,
  "selfServeCheckout": true,
  "showroomCalculator": false,
  "support": "email",
  "transparentWidget": false,
  "trialEligible": false,
  "whiteLabel": false,
}
`;
